# graph-coder

./: .gitignore  LICENSE  README.md  environment.yaml  preprocess.py  pyproject.toml  train.py
.github/workflows/: latex.yml  main.yml
.slurm/: data.sbatch  gc_data.sbatch  train.sbatch
configs/: generator_small_dp.yaml  generator_small_performer.yaml  run.yaml  small.yaml  small_colab.yaml  small_performer.yaml
configs/_common/: 01_tokenizer.yaml  02_collator.yaml  03_criterion.yaml  04_dataset.yaml  05_scheduler.yaml  _order  collator.yaml  dataset.yaml  engine.yaml  log_path.yaml  scheduler.yaml
configs/generator/: 04_runner.yaml  optimizer.yaml  runner.yaml
configs/generator/micro/: model.yaml
configs/generator/micro/_common/: code_encoder.yaml  collator.yaml  dataset.yaml  decoder.yaml  embedding.yaml  engine.yaml  graph_encoder.yaml  text_encoder.yaml
configs/generator/micro/performer/: code_encoder.yaml  collator.yaml  engine.yaml  graph_encoder.yaml  log_path.yaml  text_encoder.yaml
configs/generator/mini/pp/: code_encoder.yaml  collator.yaml  decoder.yaml  engine.yaml  graph_encoder.yaml  log_path.yaml  text_encoder.yaml
configs/generator/small/: 03_model.yaml  model.yaml
configs/generator/small/_common/: 03_graph_encoder.yaml  06_embedding.yaml  07_encoder.yaml  code_encoder.yaml  decoder.yaml  embedding.yaml  encoder.yaml  engine.yaml  graph_encoder.yaml  text_encoder.yaml
configs/generator/small/dp/: 09_model.yaml  collator.yaml  engine.yaml  runner.yaml
configs/generator/small/gpu/: engine.yaml
configs/generator/small/performer/: 02_collator.yaml  03_graph_encoder.yaml  code_encoder.yaml  collator.yaml  encoder.yaml  engine.yaml  graph_encoder.yaml  text_encoder.yaml
configs/generator/tiny/: model.yaml
graph_coder/: __init__.py
graph_coder/ast/: __init__.py  context.py  edge.py  edge_attributes.py  functional.py  node.py  node_attributes.py  parse.py  utils.py  visitors.py  vocabulary.py
graph_coder/ast/nodes/: class_def.py  key_value.py
graph_coder/ast/transformers/: ast_transformer.py  class_name_transformer.py  docstring_remover.py  function_name_transformer.py  key_value_pre_transformer.py
graph_coder/callbacks/: __init__.py  deepspeed.py
graph_coder/config/: __init__.py  __main__.py  config_builder.py  functional.py  utils.py
graph_coder/data/: __init__.py  algos.py  algos_spd.pyx  ast.py  base.py  batch.py  collator.py  features.py  human_eval.py  wrapper.py
graph_coder/datasets/: __init__.py  ast.py  ast_dataset.py  ast_example.py  base.py  func_ast.py  graph_coder_dataset.py  human_eval.py  process.py  registry.py
graph_coder/embedding/: graph_coder_embedder.py  train.py  transform.py
graph_coder/engine/: __init__.py  deepspeed.py
graph_coder/export/: __init__.py  ast.py  model.py
graph_coder/logger/: __init__.py  async_logger.py  logger.py
graph_coder/models/: __init__.py  base.py  documenter.py  generator.py  graph_coder.py
graph_coder/models/generator/: __init__.py  generator.py  generator_base.py  generator_pipe.py  layers.py  layers_pipe.py
graph_coder/modules/: __init__.py  conditional.py  droppath.py  feedforward.py  multihead_attention.py  multihead_performer_attention.py  orf.py  pass_through.py  performer_encoder.py  token_embedding.py  tokengt_encoder.py  tokengt_graph_decoder.py  tokengt_graph_decoder_layer.py  tokengt_graph_encoder.py  tokengt_graph_encoder_layer.py  tokenizer.py  types.py
graph_coder/modules/performer/: __init__.py  fast_attention.py  performer_encoder.py  performer_encoder_base.py  performer_encoder_pipe.py  performer_pipe.py
graph_coder/modules/tokengt/: tokengt_encoder.py  tokengt_encoder_base.py  tokengt_encoder_pipe.py  tokengt_graph_encoder.py  tokengt_graph_encoder_layer.py  tokengt_graph_encoder_layer_pipe.py  tokengt_graph_encoder_pipe.py
graph_coder/modules/tokengt_encoder/: __init__.py  tokengt_encoder.py  tokengt_encoder_pipe.py  tokengt_graph_encoder.py  tokengt_graph_encoder_layer.py  tokengt_graph_encoder_pipe.py
graph_coder/modules/transformer/: __init__.py  decoder_pipe.py  encoder_pipe.py
graph_coder/pipe/: __init__.py  dataloader.py  layers.py  module.py  types.py
graph_coder/preprocess/: __main__.py
graph_coder/run/: __init__.py  __main__.py
graph_coder/runners/: __init__.py  base.py  documenter.py  generator.py  generator_pipe.py  human_eval.py
graph_coder/tokenizer/: __init__.py  base.py  graph_coder_tokenizer.py  train.py  transform.py
graph_coder/train/: __init__.py  __main__.py  train.py
graph_coder/transform/: transform.py
graph_coder/utils/: __init__.py  activation.py  cli.py  config.py  dist.py  env.py  filters.py  functools.py  graph_node_visitor.py  run.py  split.py  summary.py
graph_coder/visualize/: __init__.py  ast.py  graph.py
notebooks/: ast.ipynb  colab.ipynb  train.ipynb
research/: .gitignore  body.md  paper.bib  paper.tex
research/assets/: graph.tiff  source.tiff  tokens.tiff
scripts/: compile.sbatch  eval.sbatch  prepare.sh  preprocess.sbatch  train.sbatch  train_dp.sbatch  train_pp.sbatch
setup/_common/: collator.yaml
setup/generator/: runner.yaml
setup/generator/small/: model.yaml
tests/: __init__.py  test_algos.py  test_ast.py  test_collator.py  test_config.py  test_dataset.py  test_docstring_remover.py  test_docstring_transformer.py  test_documenter.py  test_documenter_runner.py  test_encoding.py  test_error.py  test_export.py  test_filter_index.py  test_func_dataset.py  test_generator.py  test_generator_runner.py  test_graphormer_init.py  test_human_eval.py  test_loaders.py  test_pad.py  test_performer.py  test_pipe.py  test_runner.py  test_sign_flip.py  test_special_tokens.py  test_tokengt_encoder.py  test_visualize.py  utils.py
tests/configs/: small.yaml  small_performer.yaml
tests/configs/split/: run.yaml
tests/data/: class_001.py  encoding_001.py  encoding_002.py  encoding_003.py  encoding_004.py  encoding_005.py  error_001.py  function_001.py  function_003.py  index.jsonl  multi_function_001.py
tests/func_data/: class_001.py  multi_class_001.py  multi_function_001.py
(+101 files in other folders)
